--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <button class="btn btn-outline-success my-2 m-sm-1 border-white" type="submit">SignUp</button>
-            <button class="btn btn-outline-success my-2 m-sm-1 border-white" type="submit">Login</button>
+            <a class="btn btn-outline-success my-2 m-sm-1 border-white" type="submit" href="login/">Login</a>
         </form>
     </div>
 </nav>
