--- a/templates/login.html
+++ b/templates/login.html
@@ -7,17 +7,18 @@
 	<body>
 		<div class="box">
 			<h2>Login</h2>
-			<form>
+			<form action="landingpage">
 				<div class="inputBox">
-					<input type="text" name="" required="">
+					<input type="text" name="userName" required="">
 					<label>Username</label>
 				</div>
 				<div class="inputBox">
-					<input type="password" name="" required="">
+					<input type="password" name="passWord" required="">
 					<label>Password</label>
 				</div>
 				<input type="submit" name="" value="Submit">
 			</form>
+			<div class="down">Don't have an account?  <a href="#">Create one</a></div>
 		</div>
 	</body>
 </html>
