added login front end

--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -5,6 +5,7 @@
 		<link href="{% static 'css/login.css' %}" rel="stylesheet" type="text/css">
 	</head>
 	<body>
+		{% include 'base/navbar.html' %}
 		<div class="box">
 			<h2>Login</h2>
 			<form action="landingpage">
