--- a/static/css/login.css
+++ b/static/css/login.css
@@ -3,7 +3,7 @@ body
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
-	background: url('../img/graphics.png');
+	background: url('../img/graphics.png') center repeat-x;
 }
 
 .box
