--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -39,35 +39,16 @@
     CSS
     ===========================================-->
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="{% static 'css/home_style.css' %}" rel="stylesheet" type="text/css">
     <!--put your custom css on the file below-->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
-
+    <link href="{% static 'css/login.css' %}" rel="stylesheet" type="text/css">
 
 </head>
 
-<body class="quickSectionActive">
-    <div class="bodyWrap">
-        {% include 'navbar.html' %}
-        <main class="contentArea">
-            <div class="contentAreaInner clearfix no-pad-left no-pad-right">
-                <header class="page-header text-center extra-top-pad">
-                    <h1>ARE <span>YOUR</span> LOST?</h1>
-                    <strong>Let’s community help you to fix issue<br><a href="#">ask a question now</a></strong>
-                </header>
-                <div class="empty-graphics-div text-center">
-                    <img src="{% static 'img/graphics2.png' %}" alt="">
-                </div>
-                <div class="text-center">
-                    <a href="#" class="btn btn-lg">POST PROBLEM STATEMENT</a>
-                </div>
-
-            </div>
-            <!--contenAreaInner-->
-        </main>
-
-    </div>
-</body>
+{% block content %}
+{% endblock %}
 
 </html>
