--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,9 +1,8 @@
+{% extends "base/home.html" %}
+
 {% load static %}
-<html>
-	<head>
-		<meta charset="utf-8">
-		<link href="{% static 'css/login.css' %}" rel="stylesheet" type="text/css">
-	</head>
+{% block content %}
+
 	<body>
 		{% include 'base/navbar.html' %}
 		<div class="box">
@@ -21,5 +20,6 @@
 			</form>
 			<div class="down">Don't have an account?  <a href="#">Create one</a></div>
 		</div>
+		</div>
 	</body>
-</html>
+{% endblock %}
