--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -1,54 +1,19 @@
 {% load static %}
 <!doctype html>
-<html lang="">
-
+<html lang="en">
 <head>
-
     <title>5Why Identifier tool</title>
-    <!--========================================
-    Meta
-    ===========================================-->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
-
-    <!-- Web Application Manifest -->
-
-    <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="xDocs">
-    <link rel="icon" sizes="192x192" href="{% static 'img/logo.png' %}">
-
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
-    <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}">
-
-    <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="assets/img/basic/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#55acee">
-    <!-- Color the status bar on mobile devices -->
-    <meta name="theme-color" content="#55acee">
-
-    <!--========================================
-    CSS
-    ===========================================-->
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="{% static 'css/home_style.css' %}" rel="stylesheet" type="text/css">
-    <!--put your custom css on the file below-->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static 'css/login.css' %}" rel="stylesheet" type="text/css">
-
+    <link rel="stylesheet" href="{% static 'css/home_style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 
-{% block content %}
-{% endblock %}
+<body class="block">
+    {% block content %}
+    {% endblock %}
+</body>
 
 </html>
