--- a/templates/user/homepage.html
+++ b/templates/user/homepage.html
@@ -2,25 +2,39 @@
 
 {% load static %}
 {% block content %}
-<body class="quickSectionActive">
-    <div class="bodyWrap">
-        {% include 'base/navbar.html' %}
+<!-- <div class="bodyWrap">
+    {% include 'base/navbar.html' %}
+    <main class="contentArea">
+        <div class="contentAreaInner clearfix no-pad-left no-pad-right">
+            <header class="page-header text-center extra-top-pad">
+                <h1>ARE <span>YOUR</span> LOST?</h1>
+                <strong>Let’s community help you to fix issue<br><a href="#">ask a question now</a></strong>
+            </header>
+            <div class="empty-graphics-div text-center">
+                <img src="{% static 'img/graphics2.png' %}" alt="">
+            </div>
+            <div class="text-center">
+                <a href="#" class="btn btn-lg">POST PROBLEM STATEMENT</a>
+            </div>
+
+        </div>
+    </main>
+</div> -->
+{% include 'base/navbar.html' %}
+    <div class="main">
         <main class="contentArea">
             <div class="contentAreaInner clearfix no-pad-left no-pad-right">
                 <header class="page-header text-center extra-top-pad">
                     <h1>ARE <span>YOUR</span> LOST?</h1>
                     <strong>Let’s community help you to fix issue<br><a href="#">ask a question now</a></strong>
                 </header>
-                <div class="empty-graphics-div text-center">
+                <div class="graphics-div text-center">
                     <img src="{% static 'img/graphics2.png' %}" alt="">
                 </div>
                 <div class="text-center">
                     <a href="#" class="btn btn-lg">POST PROBLEM STATEMENT</a>
                 </div>
-    
             </div>
-            <!--contenAreaInner-->
         </main>
     </div>
-</body>
 {% endblock %}
