--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,25 +1,22 @@
 {% extends "base/home.html" %}
 
-{% load static %}
 {% block content %}
-
-	<body>
-		{% include 'base/navbar.html' %}
-		<div class="box">
-			<h2>Login</h2>
-			<form action="landingpage">
-				<div class="inputBox">
-					<input type="text" name="userName" required="">
-					<label>Username</label>
-				</div>
-				<div class="inputBox">
-					<input type="password" name="passWord" required="">
-					<label>Password</label>
-				</div>
-				<input type="submit" name="" value="Submit">
-			</form>
-			<div class="down">Don't have an account?  <a href="#">Create one</a></div>
-		</div>
-		</div>
-	</body>
+<div class="loginblock">
+	<div class="box">
+		<h2>Login</h2>
+		<form action="landingpage">
+			<div class="inputBox">
+				<input type="text" name="userName" required="">
+				<label>Username</label>
+			</div>
+			<div class="inputBox">
+				<input type="password" name="passWord" required="">
+				<label>Password</label>
+			</div>
+			<input type="submit" name="" value="Submit">
+		</form>
+		<div class="down">Don't have an account? <a href="#">Create one</a></div>
+	</div>
+</div>
+	
 {% endblock %}
