added signup ui

--- a/templates/user/homepage.html
+++ b/templates/user/homepage.html
@@ -1,25 +1,7 @@
-{% extends "base/home.html" %}
+{% extends "base/base.html" %}
 
 {% load static %}
 {% block content %}
-<!-- <div class="bodyWrap">
-    {% include 'base/navbar.html' %}
-    <main class="contentArea">
-        <div class="contentAreaInner clearfix no-pad-left no-pad-right">
-            <header class="page-header text-center extra-top-pad">
-                <h1>ARE <span>YOUR</span> LOST?</h1>
-                <strong>Let’s community help you to fix issue<br><a href="#">ask a question now</a></strong>
-            </header>
-            <div class="empty-graphics-div text-center">
-                <img src="{% static 'img/graphics2.png' %}" alt="">
-            </div>
-            <div class="text-center">
-                <a href="#" class="btn btn-lg">POST PROBLEM STATEMENT</a>
-            </div>
-
-        </div>
-    </main>
-</div> -->
 {% include 'base/navbar.html' %}
     <div class="main">
         <main class="contentArea">
