--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,4 +1,4 @@
-.loginblock
+.signupblock
 {
 	margin: 0;
 	padding: 0;
@@ -6,7 +6,6 @@
 	font-family: sans-serif;
 	background: url('../img/graphics.png') center repeat-x; 
 }
-
 .box
 {
 	position: absolute;
