--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -21,7 +21,7 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <button class="btn btn-outline-success my-2 m-sm-1 border-white" type="submit">SignUp</button>
+            <a class="btn btn-outline-success my-2 m-sm-1 border-white" type="submit" href="signup/">SignUp</a>
             <a class="btn btn-outline-success my-2 m-sm-1 border-white" type="submit" href="login/">Login</a>
         </form>
     </div>
