Added registration functionality

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -21,8 +21,8 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <a class="btn btn-outline-success my-2 m-sm-1 border-white" type="submit" href="signup/">SignUp</a>
-            <a class="btn btn-outline-success my-2 m-sm-1 border-white" type="submit" href="login/">Login</a>
+            <a class="btn btn-primary my-2 m-sm-1 border-white" type="submit" href="signup/">SignUp</a>
+            <a class="btn btn-primary my-2 m-sm-1 border-white" type="submit" href="login/">Login</a>
         </form>
     </div>
 </nav>
