--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 
 {% block content %}
-<div class="loginblock">
+<div class="signupblock">
 	<div class="box">
 		<h2>Login</h2>
 		<form action="landingpage">
