--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -9,7 +9,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" id="nav">
             <li class="nav-item active">
                 <a class="nav-link" href="#"><strong>5Why!?</strong> <span class="sr-only">(current)</span></a>
             </li>
@@ -19,13 +19,20 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Help</a>
             </li>
+            <li class="nav-item">
+                <!--<form class="form-inline my-2 my-lg-0"></form>-->
+                <a class="btn btn-primary my-2 m-sm-1 border-white" type="submit" href="signup/">SignUp</a>
+            </li>
+            <li class="nav-item">
+                <a class="btn btn-primary my-2 m-sm-1 border-white" type="submit" href="login/">Login</a>
+            </li>
+            <li class="nav-item dropdown d-none">
+                <a class="nav-link dropdown-toggl" href="#" id="navbarDropdownMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="navbar-toggler-icon"></span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-right bg-info" aria-labelledby="navbarDropdownMenu">
+                </ul>
+            </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-<<<<<<< HEAD
-=======
-            <a class="btn btn-primary my-2 m-sm-1 border-white" type="submit" href="signup/">SignUp</a>
-            <a class="btn btn-primary my-2 m-sm-1 border-white" type="submit" href="login/">Login</a>
->>>>>>> e8fe20a274da12bad9d7d6d870c46f8d88a940db
-        </form>
     </div>
 </nav>
