Added decorators and signals to login/signup

--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -17,7 +17,7 @@
             {% endfor %}
             <input type="submit" name="" value="Create">
         </form>
-        <div class="down">Already have an account? <a href="login/">Login In</a></div>
+        <div class="down">Already have an account? <a href="{% url 'login' %}">Login In</a></div>
     </div>
 </div>
 
