--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -1,3 +1,8 @@
 <h1>Dashboard</h1>
 <a href="{% url 'logout' %}">logout</a>
 <a href="{% url 'home' %}">home</a>
+<p>
+    {{user.username}}
+    <hr>
+    {{user.email}}
+</p>
