Fixed category label in dashboard

--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -276,7 +276,7 @@
                                 </div>
                             </div>
                             <div class="posts__category"><a href="#" class="category"><i
-                                        class="bg-368f8b"></i>{{prblm.category}}</a></div>
+                                        class="bg-368f8b"></i>{{prblm.get_category_display}}</a></div>
                         </div>
                         <div class="posts__section-right">
                             <div class="posts__users">
