--- a/templates/app/private_dashboard.html
+++ b/templates/app/private_dashboard.html
@@ -7,7 +7,7 @@
         <div class="nav">
             <div class="nav__categories" style="right: 30px;">
                 <div class="nav__select">
-                    <a class="btn" href="{% url 'create_post' %}">Post New Problem Statement</a>
+                    <a class="btn" href="{% url 'create_topic' %}">Post New Problem Statement</a>
                 </div>
             </div>
             <div class="nav__categories js-dropdown">
