--- a/templates/app/create-topic.html
+++ b/templates/app/create-topic.html
@@ -22,6 +22,11 @@
     <!-- Vendor -->
     <link rel="stylesheet" href="{% static 'css/dashboard/b1.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/dashboard/b2.css' %}">
+
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="{% static 'css/dashboard/bootstrap-tagsinput.css' %}">
+
+
     <!-- Latest compiled and minified CSS -->
     <!-- Custom -->
     <link rel="stylesheet" href="{% static 'css/dashboard/s2.css' %}">
@@ -204,7 +209,7 @@
                     <span>Forum Guidelines</span>
                 </div>
                 <div class="create__section">
-                    <label class="create__label" for="title">Thread Title</label>
+                    <label class="create__label" for="title">Problem Statement Title</label>
                     <input type="text" class="form-control" id="title" placeholder="Add here">
                 </div>
                 <div class="row">
@@ -222,14 +227,10 @@
                     </div>
                     <div class="col-md-6">
                         <div class="create__section">
-                            <label class="create__label" for="sub-category">Select Sub Category</label>
-                            <label class="custom-select">
-                                <select id="sub-category">
-                                    <option>Choose</option>
-                                    <option>Choose #2</option>
-                                    <option>Choose #3</option>
-                                </select>
-                            </label>
+                            <label class="create__label" for="sub-category">Assignees</label>
+                            
+                            <input type="text" value="html,input,tag" data-role="tagsinput" id="assignees"></input>
+                      
                         </div>
                     </div>
                 </div>
@@ -259,7 +260,7 @@
                 </div>
                 <div class="create__section">
                     <label class="create__label" for="tags">Add Tags</label>
-                    <input type="text" class="form-control" id="tags" placeholder="e.g. nature, science">
+                    <input type="text" value="html,input,tag" data-role="tagsinput" id="tag"></input>
                 </div>
                 <!--<div class="create__advanced">
                     <div class="row">
@@ -346,8 +347,9 @@
                     <div class="posts__category">Category</div>
                     <div class="posts__users">Users</div>
                     <div class="posts__replies">Replies</div>
-                    <div class="posts__views">Views</div>
+                    <div class="posts__views">Status</div>
                     <div class="posts__activity">Activity</div>
+                    
                 </div>
                 <div class="posts__body">
                     <div class="posts__item">
@@ -376,6 +378,8 @@
                             <div class="posts__replies">31</div>
                             <div class="posts__views">14.5k</div>
                             <div class="posts__activity">13d</div>
+                            
+                            
                         </div>
                     </div>
                     <div class="posts__item bg-f2f4f6">
@@ -406,6 +410,9 @@
                             <div class="posts__replies">252</div>
                             <div class="posts__views">396</div>
                             <div class="posts__activity">13m</div>
+                            
+                            
+                            
                         </div>
                     </div>
                     <div class="posts__item">
@@ -434,6 +441,8 @@
                             <div class="posts__replies">207</div>
                             <div class="posts__views">7.5k</div>
                             <div class="posts__activity">41m</div>
+                            
+                            
                         </div>
                     </div>
                     <div class="posts__item posts__item--bg-gradient">
@@ -456,6 +465,8 @@
                             <div class="posts__replies">2.3k</div>
                             <div class="posts__views">2.0k</div>
                             <div class="posts__activity">1h</div>
+                            
+                            
                         </div>
                     </div>
                     <div class="posts__item">
@@ -488,6 +499,7 @@
                             <div class="posts__replies">441</div>
                             <div class="posts__views">3.1k</div>
                             <div class="posts__activity">6h</div>
+                            
                         </div>
                     </div>
                 </div>
@@ -566,5 +578,9 @@
     <script src="{% static 'js/dashboard/jquery.min.js' %}"></script>
     <script src="{% static 'js/dashboard/velocity.js' %}"></script>
     <script src="{% static 'js/dashboard/j1.js' %}"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="{% static 'js/dashboard/bootstrap-tagsinput.js' %}"></script>
+
 </body>
 </html>
