--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -24,7 +24,8 @@
     <!-- STYLESHEET -->
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800" rel="stylesheet">
-
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- icon -->
     <link rel="stylesheet" href="{% static 'css/dashboard/s1.css' %}">
     <link rel="stylesheet" href="{% static 'css/dashboard/s1.min.css' %}">
