--- a/templates/app/public_dashboard.html
+++ b/templates/app/public_dashboard.html
@@ -76,50 +76,13 @@
                                 post, register yourself in the community.</p>
                         </div>
                     </div>
-                    <!-- </div> -->
-                    <!-- <div class="posts__section-right">
-                        <div class="posts__users js-dropdown">
-                            <div>
-                                 write a for loop for every user details 
-                                <a href="#" class="avatar"><img src="{% static 'img/user.png' %}" alt="avatar"
-                                        data-dropdown-btn="user-b"></a>
-                                <div class="posts__users-dropdown dropdown dropdown--user dropdown--reverse-y"
-                                    data-dropdown-list="user-b">
-                                    <div class="dropdown__user">
-                                        <a href="#" class="dropdown__user-label bg-218380">B</a>
-                                        <div class="dropdown__user-nav">
-                                            <a href="#"><i class="icon-Add_User"></i></a>
-                                            <a href="#"><i class="icon-Message"></i></a>
-                                        </div>
-                                        <div class="dropdown__user-info">
-                                            <a href="#">Tesla Motors</a>
-                                            <p>Last post 4 hours ago. Joined Jun 1, 16</p>
-                                        </div>
-                                        <div class="dropdown__user-icons">
-                                            <a href="#"><img src="fonts/icons/badges/Intermediate.svg"
-                                                    alt="user-icon"></a>
-                                            <a href="#"><img src="fonts/icons/badges/Bot.svg" alt="user-icon"></a>
-                                            <a href="#"><img src="fonts/icons/badges/Animal_Lover.svg"
-                                                    alt="user-icon"></a>
-                                        </div>
-                                        <div class="dropdown__user-statistic">
-                                            <div>Posts - <span>1184</span></div>
-                                            <div>Answered - <span>5,863</span></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="posts__replies">66</div>
-                        <div class="posts__activity">11d</div>
-                    </div> -->
                 </div>
                 {% for prblm in statements %}
                 <div class="posts__item">
                     <div class="posts__section-left">
                         <div class="posts__topic">
                             <div class="posts__content">
-                                <a href="#">
+                                <a href="{% url 'response' prblm.id 1 %}">
                                     <h3>{{prblm.statement}}</h3>
                                 </a>
                                 <div class="posts__tags tags">
