--- a/templates/app/response.html
+++ b/templates/app/response.html
@@ -29,8 +29,8 @@
         </div>
         {% if answers.count != 0 %}
         <nav aria-label="Page navigation example" class="text-center">
-            <ul class="pagination justify-content-center ">
-                <li class="page-item" style="margin: 20px;">
+            <ul class="pagination justify-content-center " style="margin: 15px;">
+                <li class="page-item" >
                     <a class="page-link" href="#" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
