--- a/templates/base/dashboard.html
+++ b/templates/base/dashboard.html
@@ -49,7 +49,7 @@
 
                             <li><a href="{% url 'public_dashboard' %}">Home Page</a></li>
                             <li><a href="#">Teams</a></li>
-                            <li><a href="{% url 'post_ps' %}">Post New Problem Statement</a></li>
+                            <li><a href="{% url 'create_post' %}">Post New Problem Statement</a></li>
 
                         </ul>
                     </nav>
